--- a/mavenJUnit/pom.xml
+++ b/mavenJUnit/pom.xml
@@ -18,11 +18,6 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.mjc813</groupId>
-      <artifactId>mjc_library</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
       <version>2.0</version>
@@ -49,6 +44,17 @@
       <artifactId>assertj-core</artifactId>
       <version>3.22.0</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.30</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.mjc813</groupId>
+      <artifactId>mjc_library</artifactId>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
