--- a/swimpool_app/src/main/resources/application.yml
+++ b/swimpool_app/src/main/resources/application.yml
@@ -6,8 +6,8 @@ spring:
 #    driver-class-name: com.mysql.cj.jdbc.Driver  # JDBC ???? ??? (MySQL? ??)
     url: jdbc:log4jdbc:mysql://localhost:3306/swimpool_db?serverTimezone=Asia/Seoul&characterEncoding=UTF-8	# ?????? URL
     driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-    username: swimmer  # ?????? ??? ??
-    password: swimmer1234!  # ?????? ????
+    username: swimpool  # ?????? ??? ??
+    password: qwer1234!  # ?????? ????
   mustache:
     enabled: true
     prefix: classpath:/templates/
@@ -17,7 +17,7 @@ spring:
       cache: false
 
 server:
-  port: 8084
+  port: 18080
   servlet:
     encoding:
       charset: UTF-8
