--- a/swimpool_app/src/main/resources/application.yml
+++ b/swimpool_app/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 spring:
   application:
     name: swimpool_app
-  datasource: # mysql ???
-#    url: jdbc:mysql://localhost:3306/swimpool_db?serverTimezone=Asia/Seoul&characterEncoding=UTF-8	# ?????? URL
-#    driver-class-name: com.mysql.cj.jdbc.Driver  # JDBC ???? ??? (MySQL? ??)
-    url: jdbc:log4jdbc:mysql://localhost:3306/swimpool_db?serverTimezone=Asia/Seoul&characterEncoding=UTF-8	# ?????? URL
+  datasource: # mysql 접속
+#    url: jdbc:mysql://localhost:3306/swimpool_db?serverTimezone=Asia/Seoul&characterEncoding=UTF-8	# 접속 URL
+#    driver-class-name: com.mysql.cj.jdbc.Driver  # JDBC 드라이버 (MySQL 용도)
+    url: jdbc:log4jdbc:mysql://localhost:3306/swimpool_db?serverTimezone=Asia/Seoul&characterEncoding=UTF-8	# 접속 URL
     driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-    username: swimpool  # ?????? ??? ??
-    password: qwer1234!  # ?????? ????
+    username: swimpool  # mysql 유저
+    password: qwer1234!  # mysql 유저 암호
   mustache:
     enabled: true
     prefix: classpath:/templates/
@@ -15,9 +15,11 @@ spring:
     charset: UTF-8
     servlet:
       cache: false
+  session:
+    timeout: 120s
 
 server:
-  port: 18080
+  port: 8084
   servlet:
     encoding:
       charset: UTF-8
